# GBpp

./: .gitignore  CMakeLists.txt  README.md  main
src/: main.cpp
src/core/: cpu.cpp  cpu.cpp.bkp  cpu.h  iocontroller.cpp  iocontroller.h  mmu.cpp  mmu.h
src/disassembler/: disassembly.cpp
src/gui/: displaygui.cpp  displaygui.h
src/hw/: cpu.cpp
src/interfaces/: cpudisplayinterface.h  cpuppuinterface.h  mmumemoryinterface.h  ppumemoryinterface.h
src/io/: cpuiocontroller.cpp  cpuiocontroller.h  videoio.h
src/memory/: cartridgerom.cpp  cartridgerom.h  hram.cpp  hram.h  ram.cpp  ram.h
src/video/: display.cpp  display.h  ppu.cpp  ppu.h  vram.cpp  vram.h  vrammap.h
